37-heap-dumper/02 流式压缩+多触发入口(37 域收官): 压缩管线(DumpWriter→CompressionBackend 块队列→FileWriter;worker 线程与遍历并行但全程 safepoint 内,块 id 顺序落盘;GZipCompressor dlsym libzip 的 ZIP_GZip_Fully/InitParams,第一块带 HPROF BLOCKSIZE 注释);五路触发(attach dumpheap/DCmd GC.heap_dump 唯一压缩路/JMX jmm_DumpHeap0/OOM cmpxchg 只报一次+不做 GC/GC 前后 full_gc_dump);JFR 应急 dump 编造澄清;大纲回填 ⚠️ 11 组(safepoint 外压缩错/JFR 编造/jcmd→JMM 错/四路不全);实证: gzip 头 1f8b+FCOMMENT+BLOCKSIZE=1048576、12x 压缩比、OOM 自动 dump java_pid<pid>.hprof(34MB)